Fix landing page It wouldn't behave appropriately on mobile (horizontal scroll bc of image overflow, inconsistent, sucky in general)

--- a/assets/css/landing.scss
+++ b/assets/css/landing.scss
@@ -1,21 +1,8 @@
 @import "variables";
+@import url('https://fonts.googleapis.com/css2?family=Quattrocento:wght@700&display=swap');
 
 html {
     overflow-x: hidden;
-}
-
-section.hero {
-    border-top: 20px solid white;
-    border-left: 20px solid white;
-    border-right: 20px solid white;
-}
-
-@media (max-width: 840px) {
-    section.hero {
-        border-top: calc(20px / 2) solid white;
-        border-left: calc(20px / 2) solid white;
-        border-right: calc(20px / 2) solid white;
-    }
 }
 
 section {
@@ -23,32 +10,30 @@ section {
 }
 
 section.hero {
-    min-height: 100vh;
-    left: 0;
-    top: 0;
+    height: 100vh;
     width: 100%;
     z-index: -1;
 
-    overflow: hidden;
     background: rgb(243, 243, 243);
     background: linear-gradient(180deg, rgba(243, 243, 243, 1) 0%, rgba(255, 255, 255, 1) 93%, rgba(255, 255, 255, 1) 100%);
     cursor: default;
 
+    display: grid;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(20, 1fr);
+
+    overflow-x: hidden;
 
     .left {
-        margin-left: -20px;
-        transform: translate(0%, -50%);
-        top: 50%;
-        position: absolute;
-        width: calc(50vw + 16em);
-        max-width: calc(100vw - 15px);
-        height: 65vh;
+        grid-column: 1 / 15;
+        grid-row: 4 / 20;
 
         display: flex;
         flex-direction: column;
         align-items: flex-end;
 
         div.bg {
+            z-index: 2;
             width: 100%;
             height: 100%;
             background-color: #f30000;
@@ -57,12 +42,14 @@ section.hero {
             .bg-accent {
                 height: 100%;
                 width: 20px;
+                margin-left: -20px;
                 background-color: #ff0000;
             }
         }
     }
 
     .tagline {
+        z-index: 3;
         padding-right: 4em;
         top: 50%;
         transform: translate(0%, -50%);
@@ -85,36 +72,36 @@ section.hero {
     }
 
     .hero-img {
-        position: absolute;
-        top: 50%;
-        left: calc(50vw + 16em);
-        transform: translate(-50%, -50%);
-        //overflow: hidden;
+        display: relative;
+        z-index: 1;
+        grid-column: 15 / 20;
+        grid-row: 6 / 16;
+        margin-left: -16rem;
 
         img {
+            width: 100%;
+            height: 100%;
             -webkit-filter: grayscale(100%);
             filter: grayscale(100%);
             object-fit: cover;
-            height: 50vh;
         }
+    }
 
-        .dots {
-            position: absolute;
-            right: 20%;
-            top: calc(50vh + 1rem);
-            transform: translate(50%, 0%);
+    .dots {
+        grid-column: 16 / 19;
+        grid-row: 16;
+        margin-left: 1rem;
 
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
 
-            font-size: 2em;
-            min-width: 6em;
+        font-size: 2em;
+        min-width: 6em;
 
-            :last-child {
-                color: red;
-            }
+        :last-child {
+            color: red;
         }
     }
 
@@ -132,15 +119,47 @@ section.hero {
 }
 
 @media (max-width: 700px) {
-    .hero .tagline {
-        padding-right: 1em;
+    section.hero {
+        .left {
+            grid-column: 1 / 19;
+        }
 
-        h1 {
-            font-size: 3em;
+        .hero-img img {
+            width: unset;
+        }
+
+        .tagline {
+            left: calc(20px + 1em);
+            padding-right: 0;
+            h1 {
+                font-size: 3em;
+            }
+        }
+
+        .dots {
+            grid-column: 10 / 14;
+            grid-row: 17;
+            margin-left: 0;
+            margin-top: 2rem;
         }
     }
+}
 
-    section.hero .hero-img {}
+section.hero .border {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    border-top: 20px solid white;
+    border-left: 20px solid white;
+    border-right: 20px solid white;
+}
+
+@media (max-width: 840px) {
+    section.hero .border {
+        border-top: calc(20px / 2) solid white;
+        border-left: calc(20px / 2) solid white;
+        border-right: calc(20px / 2) solid white;
+    }
 }
 
 .container {
@@ -153,22 +172,28 @@ main section {
         opacity: .6;
         margin-bottom: 1em;
     }
+
     &.tagline {
         padding-top: 2em;
         padding-bottom: 4em;
         font-size: 2.7em;
         text-align: center;
     }
+
     &.contact-me {
         text-align: center;
+        background-color: rgb(243, 243, 243);
+        padding: 4rem;
+
         :first-child {
             font-size: 2em;
+            font-weight: bold;
             margin-bottom: 1em;
         }
     }
 }
 
-@media (min-width: $mobile-breakpoint) {
+@media (max-width: $mobile-breakpoint) {
     main section.tagline {
         font-size: 1.7em;
     }
